# llmzoomcamp-2026-final-project

./: .env.example  .gitignore  .pre-commit-config.yaml  EVALUATION.md  README.md  docker-compose.yml  prompt-imagem.md  pyproject.toml
.github/workflows/: ci.yml
dashboards/: food-wine-dashboard.json  grafana-dashboard.yml  grafana-datasource.yml
deploy/: deploy.sh  provision.sh
docker/: Caddyfile  Dockerfile  init-db.sql
docs/: architecture.md  deployment.md  evaluation.md  limitations.md  monitoring.md
notebooks/: 01_retrieval_evaluation.py  02_llm_evaluation.py
openspec/: config.yaml
openspec/changes/archive/2026-07-19-portuguese-food-wine-guide/: design.md  tasks.md
openspec/changes/archive/2026-07-19-portuguese-food-wine-guide/specs/chat-api/: spec.md
openspec/changes/archive/2026-07-19-portuguese-food-wine-guide/specs/chat-ui/: spec.md
openspec/changes/archive/2026-07-19-portuguese-food-wine-guide/specs/document-ingestion/: spec.md
openspec/changes/archive/2026-07-19-portuguese-food-wine-guide/specs/hybrid-search/: spec.md
openspec/changes/portuguese-food-wine-guide/: proposal.md  tasks.md
openspec/changes/portuguese-food-wine-guide/specs/answer-generation/: spec.md
openspec/changes/portuguese-food-wine-guide/specs/cloud-deployment/: spec.md
src/api/: answer.py  app.py  db.py  routes.py
src/api/static/: index.html
src/evaluation/: test_set.py
src/ingestion/: __init__.py  chunking.py  embedding.py  infovini.py  mdpi.py  qdrant_index.py  run.py  wikipedia.py
src/search/: bm25.py  dense.py  hybrid.py  query_rewriter.py  reranker.py
(+3 files in other folders)
