[project]
name = "portuguese-food-wine-guide"
version = "0.1.0"
description = "Portuguese Food & Wine Guide - LLM Zoomcamp 2026 Final Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "openai>=1.68.0",
    "sentence-transformers>=3.4.0",
    "qdrant-client>=1.13.0",
    "psycopg2-binary>=2.9.10",
    "rank-bm25>=0.2.2",
    "beautifulsoup4>=4.13.0",
    "requests>=2.32.0",
    "tiktoken>=0.9.0",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "marimo>=0.12.0",
]

[project.scripts]
ingest = "src.ingestion.run:main"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"src/evaluation/test_set.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.setuptools.packages.find]
where = ["src"]
